Fixing some things on account page, adding styling, fixed z-index on nav

--- a/src/components/nav/nav.module.css
+++ b/src/components/nav/nav.module.css
@@ -10,7 +10,7 @@
   margin: 0;
   width: 200vw;
   height: 80px;
-
+  z-index: 10;
   background-color: #bcf;
 
   display: flex;
